Se termino carro en 3d

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D - sockets</title>
-
+    <title>Card</title>
 </head>
 <body>
-    <p>Car 3D</p>
+    <div id="control" class="control">Arrastrar para mover</div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/110/three.min.js"></script>
-    <script src="js/main.js"></script>
+    <!--- Script -->
+    <script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
