--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card</title>
+
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(0,0,0,0.6);
+            width: 100vw;
+            height: 100vh;
+            margin:0;
+            padding: 0;
+            font-family: sans-serif;
+            font-size: 25px;
+        }
+        .control {
+            width: 300px;
+            height: 300px;
+            background-color: white;
+            color: rgba(0,0,0, 0.6);
+            text-align: center;
+            line-height: 300px;
+            border-radius: 50%;
+        }
+    </style>
 </head>
 <body>
     <div id="control" class="control">Arrastrar para mover</div>
 
     <!--- Script -->
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="socket.io/socket.io.js"></script>
+    <script src="js/remote.js"></script>
 </body>
 </html>
