Se ajusto control remoto

--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,12 @@
             font-size: 25px;
         }
         .control {
-            width: 300px;
-            height: 300px;
+            width: 100vw;
+            height: 100vh;
             background-color: white;
             color: rgba(0,0,0, 0.6);
             text-align: center;
             line-height: 300px;
-            border-radius: 50%;
         }
     </style>
 </head>
